Fri Aug 22 20:57:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/CUTS_CoSMIC.wxs:
        * install/CUTS_PICML.wxs:

          . Bug fix where the installer was not initializing cuts.config
            porperly based on the installed backend generators.

          . Updated the installer so that the end-user can select which
            backend generators they want to install.

Wed Aug 20 23:46:31 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * docs/bmw.doxygen:

          . Can now easily generate doxygen specifically for the BMW and nothing
            else.

        * utils/BMW/website/App_Code/DataBaseActions.cs:
        * utils/BMW/website/App_Code/LogFormatActions.cs:
        * utils/BMW/website/App_Code/UnitTestActions.cs:

          . Now meet DOC/doxygen conventions

        * utils/BMW/website/logformats.aspx.cs:
        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Minor

        * utils/BMW/website/unittestchart.aspx.cs:

          . Added class ChartingAPI to ease charting with the current system.

Wed Aug 20 13:54:16 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Implemented the following stored procedures/functions:

            . cuts.get_variable_log_format_id: returns the id of the
              log format that owns the specified variable.

            . cuts.select_unit_test_causal_relations: selects the
              causal relation between log formats based on the relation
              variables between two log formats.

          . Added a new column named 'rel_index' to the
            cuts.unit_test_relations table so a relation can be composed
            from more than one log format variable.

          . Added UNIQUE constaints to ensure that a variable is not
            use more than once is a relation.
